feat: auto join of users to segments
